--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "huggingface",
   "version": "1.0.0",
-  "description": "",
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@xenova/transformers": "^2.17.1",
-    "express": "^4.19.2"
-  }
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {},
+  "description": ""
 }
